[Article][ADD] Implement Action & tests for this API
